--- a/client/public/index.html
+++ b/client/public/index.html
@@ -28,6 +28,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="https://app.tor.us/v0.2.9/embed.min.js"
+      integrity="sha384-V/yXnpQkPowuRv52rYOFZhQOUfotv2nbDyu+8mc3ktUI7/XGsm5bDCDYZHvTF8o2" crossorigin="anonymous"></script>
     <div id="root"></div>
     <!--
       This HTML file is a template.
